--- a/translations/locales/en/placeholder.json
+++ b/translations/locales/en/placeholder.json
@@ -2,6 +2,6 @@
   "searchEmpty": "Search your dream build",
   "searchNotFound": "No build found with theses stats",
   "displayEmpty": "Compare your builds",
-  "savedEmpty": "Find here your build collection",
+  "savedEmpty": "Find here your build Collection",
   "none": "None"
 }
