--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -36,7 +36,7 @@
   "sortBuilds": "Sort builds",
   "sortElements": "Sort elements",
 
-  "edit": "Edit",
+  "editTheBuild": "Edit the build",
   "save": "Save",
   "loadTheStats": "Load the stats",
   "loadTheBuild": "Load the build",
