--- a/translations/locales/fr/error.json
+++ b/translations/locales/fr/error.json
@@ -11,5 +11,5 @@
   "buildNameRequiredForSharing": "vous devez entrer un nom pour partager un build",
   "buildNameRequiredForSaving": "vous devez entrer un nom pour enregister un build",
   "buildNameRequiredForLoading": "vous devez entrer un nom pour déplacer un build dans le Comparateur",
-  "savedBuildCannotHaveEmptyName": "les builds de la collection doivent avoir un nom"
+  "savedBuildCannotHaveEmptyName": "les builds de la Collection doivent avoir un nom"
 }
