--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -16,7 +16,7 @@
 
   "resetSettingsText": "Souhaitez-vous vraiment réinitialiser les préférences ?",
   "deleteAllBuildsInMemoryText": "Souhaitez-vous vraiment supprimer tous les builds enregistrés ?",
-  "appliedForBuildFinderAndComparator": "Appliquées au démarrage de l'app, pour le Build Finder et le Comparateur",
+  "appliedForBuildFinderAndComparator": "Appliquées au démarrage de l'app, pour le Chercheur et le Comparateur",
 
   "buildFound": "Build trouvé",
 
