--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -2,6 +2,6 @@
   "searchEmpty": "Recherchez le build de vos rêves",
   "searchNotFound": "Aucun build trouvé correspondant à ces stats",
   "displayEmpty": "Comparez vos builds",
-  "savedEmpty": "Retrouvez votre collection de builds ici",
+  "savedEmpty": "Retrouvez votre Collection de builds ici",
   "none": "Aucun"
 }
