--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -13,6 +13,7 @@
   "close": "Fermer",
   "ok": "OK",
 
+  "editTheBuild": "Editer le build",
   "remove": "Supprimer",
   "save": "Enregistrer",
   "loadTheStats": "Charger les stats",
