add elements translations

--- a/translations/locales/en/elementsMK8D.json
+++ b/translations/locales/en/elementsMK8D.json
@@ -1,135 +1,138 @@
 {
+  "Mario": "Mario",
+  "Luigi": "Luigi",
+  "Peach": "Peach",
+  "Daisy": "Daisy",
+  "Rosalina": "Rosalina",
+  "TanookiMario": "Tanooki Mario",
+  "CatPeach": "Cat Peach",
+  "Birdo": "Birdo",
+  "Yoshi": "Yoshi",
+  "Toad": "Toad",
+  "Koopa": "Koopa",
+  "ShyGuy": "Shy Guy",
+  "Lakitu": "Lakitu",
+  "Toadette": "Toadette",
+  "KingBoo": "King Boo",
+  "PeteyPiranha": "Petey Piranha",
+  "BabyMario": "Baby Mario",
+  "BabyLuigi": "Baby Luigi",
   "BabyPeach": "Baby Peach",
   "BabyDaisy": "Baby Daisy",
   "BabyRosalina": "Baby Rosalina",
-  "Lemmy": "Lemmy",
-  "BabyMario": "Baby Mario",
-  "BabyLuigi": "Baby Luigi",
-  "DryBones": "Dry Bones",
-  "LightMii": "Light Mii",
-  "Toadette": "Toadette",
-  "Wendy": "Wendy",
-  "Isabelle": "Isabelle",
-  "Koopa": "Koopa",
-  "Lakitu": "Lakitu",
-  "BowserJr.": "Bowser Jr.",
-  "Toad": "Toad",
-  "ShyGuy": "Shy Guy",
-  "Larry": "Larry",
-  "CatPeach": "Cat Peach",
-  "InklingGirl": "Inkling Girl",
-  "VillagerFemale": "Villager Female",
-  "DiddyKong": "Diddy Kong",
-  "Peach": "Peach",
-  "Daisy": "Daisy",
-  "Yoshi": "Yoshi",
-  "Birdo": "Birdo",
-  "Peachette": "Peachette",
-  "TanookiMario": "Tanooki Mario",
-  "InklingBoy": "Inkling Boy",
-  "VillagerMale": "Villager Male",
-  "Mario": "Mario",
-  "Ludwig": "Ludwig",
-  "MediumMii": "Medium Mii",
-  "Luigi": "Luigi",
-  "Iggy": "Iggy",
-  "Kamek": "Kamek",
-  "Rosalina": "Rosalina",
-  "KingBoo": "King Boo",
-  "Link": "Link",
-  "Pauline": "Pauline",
-  "PeteyPiranha": "Petey Piranha",
   "MetalMario": "Metal Mario",
   "PinkGoldPeach": "Pink Gold Peach",
-  "Waluigi": "Waluigi",
-  "DonkeyKong": "Donkey Kong",
-  "Roy": "Roy",
   "Wiggler": "Wiggler",
   "Wario": "Wario",
-  "DryBowser": "Dry Bowser",
-  "HeavyMii": "Heavy Mii",
-  "FunkyKong": "Funky Kong",
+  "Waluigi": "Waluigi",
+  "DonkeyKong": "Donkey Kong",
   "Bowser": "Bowser",
+  "DryBones": "Dry Bones",
+  "BowserJr.": "Bowser Jr.",
+  "DryBowser": "Dry Bowser",
+  "Kamek": "Kamek",
+  "Lemmy": "Lemmy",
+  "Larry": "Larry",
+  "Wendy": "Wendy",
+  "Ludwig": "Ludwig",
+  "Iggy": "Iggy",
+  "Roy": "Roy",
   "Morton": "Morton",
+  "Peachette": "Peachette",
+  "InklingGirl": "Inkling Girl",
+  "InklingBoy": "Inkling Boy",
+  "VillagerMale": "Villager Male",
+  "VillagerFemale": "Villager Female",
+  "Isabelle": "Isabelle",
+  "Link": "Link",
+  "DiddyKong": "Diddy Kong",
+  "FunkyKong": "Funky Kong",
+  "Pauline": "Pauline",
+  "LightMii": "Light Mii",
+  "MediumMii": "Medium Mii",
+  "HeavyMii": "Heavy Mii",
 
   "StandardKart": "Standard Kart",
-  "300SLRoadster": "300 SL Roadster",
   "PipeFrame": "Pipe Frame",
   "Mach8": "Mach 8",
-  "SportsCoupe": "Sports Coupe",
   "SteelDriver": "Steel Driver",
-  "Tri-Speeder": "Tri-Speeder",
   "CatCruiser": "Cat Cruiser",
-  "BDasher": "B Dasher",
   "CircuitSpecial": "Circuit Special",
-  "P-Wing": "P-Wing",
+  "Tri-Speeder": "Tri-Speeder",
   "Badwagon": "Badwagon",
-  "GLA": "GLA",
   "Prancer": "Prancer",
   "Biddybuggy": "Biddybuggy",
-  "Streetle": "Streetle",
   "Landship": "Landship",
   "Sneaker": "Sneaker",
+  "SportsCoupe": "Sports Coupe",
   "GoldKart": "Gold Kart",
+  "GLA": "GLA",
   "W25SilverArrow": "W 25 Silver Arrow",
+  "300SLRoadster": "300 SL Roadster",
   "BlueFalcon": "Blue Falcon",
   "TanookiBuggy": "Tanooki Buggy",
+  "BDasher": "B Dasher",
+  "Streetle": "Streetle",
+  "P-Wing": "P-Wing",
   "KoopaClown": "Koopa Clown",
-  "TheDuke": "The Duke",
-  "Varmint": "Varmint",
-  "CityTripper": "City Tripper",
-  "Mr.Scooty": "Mr. Scooty",
+
   "StandardBike": "Standard Bike",
+  "TheDuke": "The Duke",
   "FlameRider": "Flame Rider",
+  "Varmint": "Varmint",
+  "Mr.Scooty": "Mr. Scooty",
   "MasterCycleZero": "Master Cycle Zero",
+  "CityTripper": "City Tripper",
+
   "Comet": "Comet",
-  "YoshiBike": "Yoshi Bike",
   "SportBike": "Sport Bike",
   "JetBike": "Jet Bike",
+  "YoshiBike": "Yoshi Bike",
   "MasterCycle": "Master Cycle",
-  "Inkstriker": "Inkstriker",
-  "BoneRattler": "Bone Rattler",
-  "TeddyBuggy": "Teddy Buggy",
+
   "StandardATV": "Standard ATV",
   "WildWiggler": "Wild Wiggler",
+  "TeddyBuggy": "Teddy Buggy",
+  "BoneRattler": "Bone Rattler",
   "SplatBuggy": "Splat Buggy",
+  "Inkstriker": "Inkstriker",
 
   "Standard": "Standard",
-  "BlueStandard": "Blue Standard",
-  "GLATires": "GLA Tires",
   "Monster": "Monster",
-  "HotMonster": "Hot Monster",
-  "AncientTires": "Ancient Tires",
   "Roller": "Roller",
-  "AzureRoller": "Azure Roller",
   "Slim": "Slim",
-  "CrimsonSlim": "Crimson Slim",
-  "Wood": "Wood",
   "Slick": "Slick",
-  "CyberSlick": "Cyber Slick",
   "Metal": "Metal",
-  "GoldTires": "Gold Tires",
   "Button": "Button",
-  "LeafTires": "Leaf Tires",
   "Off-Road": "Off-Road",
-  "RetroOff-Road": "Retro Off-Road",
-  "TriforceTires": "Triforce Tires",
-  "Cushion": "Cushion",
   "Sponge": "Sponge",
+  "Wood": "Wood",
+  "Cushion": "Cushion",
+  "BlueStandard": "Blue Standard",
+  "HotMonster": "Hot Monster",
+  "AzureRoller": "Azure Roller",
+  "CrimsonSlim": "Crimson Slim",
+  "CyberSlick": "Cyber Slick",
+  "RetroOff-Road": "Retro Off-Road",
+  "GoldTires": "Gold Tires",
+  "GLATires": "GLA Tires",
+  "TriforceTires": "Triforce Tires",
+  "AncientTires": "Ancient Tires",
+  "LeafTires": "Leaf Tires",
 
   "SuperGlider": "Super Glider",
-  "WaddleWing": "Waddle Wing",
-  "HylianKite": "Hylian Kite",
   "CloudGlider": "Cloud Glider",
-  "ParachuteGlider": "Parachute Glider",
-  "FlowerGlider": "Flower Glider",
-  "PaperGlider": "Paper Glider",
   "WarioWing": "Wario Wing",
-  "PlaneGlider": "Plane Glider",
-  "GoldGlider": "Gold Glider",
-  "Paraglider": "Paraglider",
+  "WaddleWing": "Waddle Wing",
   "PeachParasol": "Peach Parasol",
-  "BowserKite": "Bowser Kite",
+  "ParachuteGlider": "Parachute Glider",
   "ParafoilGlider": "Parafoil Glider",
-  "MKTVParafoilGlider": "MKTV Parafoil Glider"
+  "FlowerGlider": "Flower Glider",
+  "BowserKite": "Bowser Kite",
+  "PlaneGlider": "Plane Glider",
+  "MKTVParafoilGlider": "MKTV Parafoil Glider",
+  "GoldGlider": "Gold Glider",
+  "HylianKite": "Hylian Kite",
+  "Paraglider": "Paraglider",
+  "PaperGlider": "Paper Glider"
 }
