--- a/translations/locales/fr/elementsMKW.json
+++ b/translations/locales/fr/elementsMKW.json
@@ -1,135 +1,95 @@
 {
-  "BabyPeach": "Bébé Peach",
-  "BabyDaisy": "Bébé Daisy",
-  "BabyRosalina": "Bébé Harmonie",
-  "Lemmy": "Lemmy",
-  "BabyMario": "Bébé Mario",
-  "BabyLuigi": "Bébé Luigi",
-  "DryBones": "Skelerex",
-  "LightMii": "Mii léger",
-  "Toadette": "Toadette",
-  "Wendy": "Wendy",
-  "Isabelle": "Marie",
-  "Koopa": "Koopa",
-  "Lakitu": "Lakitu",
-  "BowserJr.": "Bowser Jr.",
-  "Toad": "Toad",
-  "ShyGuy": "Maskass",
-  "Larry": "Larry",
-  "CatPeach": "Peach Chat",
-  "InklingGirl": "Fille Inkling",
-  "VillagerFemale": "Villageoise",
-  "DiddyKong": "Diddy Kong",
+  "Mario": "Mario",
+  "Luigi": "Luigi",
   "Peach": "Peach",
   "Daisy": "Daisy",
   "Yoshi": "Yoshi",
-  "Birdo": "Birdo",
-  "Peachette": "Peachette",
-  "TanookiMario": "Mario Tanuki",
-  "InklingBoy": "Garçon Inkling",
-  "VillagerMale": "Villageois",
-  "Mario": "Mario",
-  "Ludwig": "Ludwig",
-  "MediumMii": "Mii moyen",
-  "Luigi": "Luigi",
-  "Iggy": "Iggy",
-  "Kamek": "Kamek",
-  "Rosalina": "Harmonie",
-  "KingBoo": "Roi Boo",
-  "Link": "Link",
-  "Pauline": "Pauline",
-  "PeteyPiranha": "Flora piranha",
-  "MetalMario": "Mario de métal",
-  "PinkGoldPeach": "Peach d'or rose",
-  "Waluigi": "Waluigi",
-  "DonkeyKong": "Donkey Kong",
-  "Roy": "Roy",
-  "Wiggler": "Wiggler",
-  "Wario": "Wario",
-  "DryBowser": "Bowser Skelet",
-  "HeavyMii": "Mii lourd",
-  "FunkyKong": "Funky Kong",
+  "Toad": "Toad",
+  "KoopaTroopa": "Koopa",
   "Bowser": "Bowser",
-  "Morton": "Morton",
+  "Wario": "Wario",
+  "Waluigi": "Waluigi",
+  "Rosalina": "Harmonie",
+  "Pauline": "Pauline",
+  "BabyMario": "Bébé Mario",
+  "BabyLuigi": "Bébé Luigi",
+  "BabyPeach": "Bébé Peach",
+  "BabyDaisy": "Bébé Daisy",
+  "Lakitu": "Lakitu",
+  "Toadette": "Toadette",
+  "BowserJr.": "Bowser Jr.",
+  "BabyRosalina": "Bébé Harmonie",
+  "Birdo": "Birdo",
+  "KingBoo": "Roi Boo",
+  "ShyGuy": "Maskass",
+  "DonkeyKong": "Donkey Kong",
+  "Nabbit": "Carottin",
+  "PiranhaPlant": "Plante Piranha",
+  "HammerBro": "Frère Marto",
+  "MontyMole": "Topi Taupe",
+  "Goomba": "Goomba",
+  "Spike": "Spike",
+  "Sidestepper": "Zarbipas",
+  "CheepCheep": "Cheep Cheep",
+  "DryBones": "Skelerex",
+  "Wiggler": "Wiggler",
+  "Cataquack": "Catacouac",
+  "Pianta": "Pianta",
+  "RockyWrench": "Torti Taupe",
+  "Conkdor": "Pico Condor",
+  "Pokey": "Pokey",
+  "Peepa": "Paltrak",
+  "Swoop": "Swooper",
+  "Cow": "Meuh Meuh",
+  "Stingby": "Butitine",
+  "FishBone": "Ossec",
+  "CoinCoffer": "Crapognon",
+  "Snowman": "Bonhomme de neige",
+  "Penguin": "Pingouin",
+  "Dolphin": "Dauphin",
+  "Para-Biddybud": "Paracoccinelly",
+  "Chargin'Chuck": "Bill Dozer",
 
-  "StandardKart": "Kart Standard",
-  "300SLRoadster": "300 SL Roadster",
-  "PipeFrame": "Kart rétro",
-  "Mach8": "Proto 8",
-  "SportsCoupe": "Propulsar",
-  "SteelDriver": "Nautomobile",
-  "Tri-Speeder": "Tubul R3",
-  "CatCruiser": "Chabriolet",
+  "StandardKart": "Kart standard",
+  "RallyKart": "Kart rallye",
+  "Plushbuggy": "Rétro-ruban",
+  "BabyBlooper": "P'tit Bloops",
+  "ZoomBuggy": "Cara-buggy",
+  "Chargin'Truck": "Buggy Dozer",
+  "HotRod": "Coupé fleur",
+  "RibbitRevster": "Turbo-rainette",
+  "RoadsterRoyale": "Cabriolet royal",
   "BDasher": "Intrépide",
-  "CircuitSpecial": "Mach-célère",
-  "P-Wing": "Magikart",
-  "Badwagon": "Beat-bolide",
-  "GLA": "GLA",
-  "Prancer": "Cavalkart",
   "Biddybuggy": "Paracoccinelly",
-  "Streetle": "Autorhino",
-  "Landship": "Caravéloce",
-  "Sneaker": "Sneakart",
-  "GoldKart": "Or",
-  "W25SilverArrow": "W25 Flèche d'argent",
-  "BlueFalcon": "Blue Falcon",
-  "TanookiBuggy": "Buggy tanuki",
-  "KoopaClown": "Koopa-mobile",
-  "TheDuke": "Cybertrombe",
-  "Varmint": "Mécabécane",
-  "CityTripper": "Scooter AC",
-  "Mr.Scooty": "Scootinette",
-  "StandardBike": "Moto Standard",
-  "FlameRider": "Flamboyante",
-  "MasterCycleZero": "Destrier de légende 0.1",
-  "Comet": "Météore",
-  "YoshiBike": "Yoshimoto",
-  "SportBike": "Sport GP",
-  "JetBike": "Epervier",
-  "MasterCycle": "Destrier de légende",
-  "Inkstriker": "Missile tornade",
-  "BoneRattler": "Malécycle",
-  "TeddyBuggy": "Quad nounours",
-  "StandardATV": "Quad Standard",
-  "WildWiggler": "Quad Wiggler",
-  "SplatBuggy": "Kartoon",
+  "TinyTitan": "Mini-monstre",
+  "StellarSled": "Astroglisseur",
+  "ReelRacer": "Festivalière",
+  "BumbleV": "Butineuse",
+  "CarpetFlyer": "Tapis filant",
+  "Cloud9": "Kartocumulus",
+  "BlastronautIII": "Torpitrike",
+  "BigHorn": "Turbison",
+  "Li'lDumpy": "Récréabenne",
+  "MechaTrike": "Automatrike",
+  "PipeFrame": "Rétro",
+  "Billdozer": "Bolide Bill",
 
-  "Standard": "Standard",
-  "BlueStandard": "Standard bleu",
-  "GLATires": "GLA",
-  "Monster": "Mastodonte",
-  "HotMonster": "Masto-flammes",
-  "AncientTires": "Archéonique",
-  "Roller": "Roller",
-  "AzureRoller": "Roller azur",
-  "Slim": "Classique",
-  "CrimsonSlim": "Classique rouge",
-  "Wood": "Bois",
-  "Slick": "Lisse",
-  "CyberSlick": "Cyber-lisse",
-  "Metal": "Métal",
-  "GoldTires": "Roue Or",
-  "Button": "Bouton",
-  "LeafTires": "Feuille",
-  "Off-Road": "Hors-piste",
-  "RetroOff-Road": "Hors-piste rétro",
-  "TriforceTires": "Triforce",
-  "Cushion": "Coussin",
-  "Sponge": "Eponge",
+  "StandardBike": "Moto standard",
+  "RallyBike": "Moto rallye",
+  "CuteScoot": "Scooter pop",
+  "MachRocket": "Supersonic",
+  "HyperPipe": "Cyclotuyau",
+  "TuneThumper": "Moto-K7",
+  "W-TwinChopper": "Chopper W",
+  "FinTwin": "Koïnobolide",
+  "R.O.B.H.O.G.": "Moto R.O.B.",
+  "DolphinDasher": "Dauphine",
+  "LocoMoto": "Cyclovapeur",
 
-  "SuperGlider": "Standard",
-  "WaddleWing": "Dendinaile",
-  "HylianKite": "Aile hylienne",
-  "CloudGlider": "Aile nuages",
-  "ParachuteGlider": "Parachute",
-  "FlowerGlider": "Aile fleurie",
-  "PaperGlider": "Aile en papier",
-  "WarioWing": "Aile Wario",
-  "PlaneGlider": "Planeur",
-  "GoldGlider": "Or",
-  "Paraglider": "Paravoile",
-  "PeachParasol": "Ombrelle Peach",
-  "BowserKite": "Bowser-volant",
-  "ParafoilGlider": "Parapente",
-  "MKTVParafoilGlider": "Parapente MKTV"
+  "FunkyDorrie": "Amphi-Dorrie",
+  "JunkyardHog": "Explomotrice",
+  "LobsterRoller": "Langous'trike",
+  "DreadSled": "Pyroglisseur",
+  "Rallygator": "Crocotrike",
+  "BowserBruiser": "Buggy Bowser"
 }
