--- a/translations/locales/fr/placeholder.json
+++ b/translations/locales/fr/placeholder.json
@@ -1,7 +1,7 @@
 {
   "searchEmpty": "Recherchez le build de vos rêves",
   "searchNotFound": "Aucun build trouvé correspondant à ces stats",
-  "displayEmpty": "Comparez vos builds",
-  "savedEmpty": "Retrouvez votre Collection de builds ici",
-  "none": "Aucun"
+  "chooseStatsToCompare": "Choisissez des stats à comparer",
+  "noBuildToCompare": "Pas de build à comparer",
+  "savedEmpty": "Retrouvez votre Collection de builds ici"
 }
