add icons on settings buttons

--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -2,9 +2,10 @@
   "search": "Search",
   "statsToCompare": "Stats to compare",
   "addABuild": "Add a build",
-  "numberOfSearchResults": "Number of search results",
-  "configureDefaultStats": "Configure default displayed stats",
+  "numberOfSearchResults": "Number of results",
+  "defaultStats": "Default displayed stats",
   "sendFeedback": "Send feedback",
+  "makeADonation": "Make a donation",
   "openSourceLicenses": "Open Source Licenses",
   "resetSettings": "Reset settings",
   "deleteAllBuildsInMemory": "Delete all saved builds",
