--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -29,6 +29,7 @@
   "resetSettings": "Reset settings",
   "openSourceLicenses": "Open Source Licenses",
   "sendFeedback": "Send feedback",
+  "makeADonation": "Make a donation",
 
   "decrease": "Decrease",
   "increase": "Increase",
