--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -2,9 +2,10 @@
   "search": "Chercher",
   "statsToCompare": "Stats à comparer",
   "addABuild": "Ajouter un build",
-  "numberOfSearchResults": "Nombre de résultats de recherche",
-  "configureDefaultStats": "Configurer les stats affichées par défault",
+  "numberOfSearchResults": "Nombre de résultats",
+  "defaultStats": "Stats affichées par défault",
   "sendFeedback": "Laisser un avis",
+  "makeADonation": "Faire un don",
   "openSourceLicenses": "Licences Open Source",
   "resetSettings": "Réinitialiser les préférences",
   "deleteAllBuildsInMemory": "Supprimer tous les builds enregistrés",
