add source code button, issue #248

--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -5,6 +5,7 @@
   "numberOfSearchResults": "Nombre de résultats",
   "defaultStats": "Stats affichées par défault",
   "sendFeedback": "Laisser un avis",
+  "sourceCode": "Code source",
   "makeADonation": "Faire un don",
   "openSourceLicenses": "Licences Open Source",
   "resetSettings": "Réinitialiser les préférences",
