--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -5,6 +5,7 @@
   "numberOfSearchResults": "Number of results",
   "defaultStats": "Default displayed stats",
   "sendFeedback": "Send feedback",
+  "sourceCode": "Source code",
   "makeADonation": "Make a donation",
   "openSourceLicenses": "Open Source Licenses",
   "resetSettings": "Reset settings",
