--- a/translations/locales/fr/tooltip.json
+++ b/translations/locales/fr/tooltip.json
@@ -29,6 +29,7 @@
   "resetSettings": "Réinitialiser les préférences",
   "openSourceLicenses": "Licences Open Source",
   "sendFeedback": "Laisser un avis",
+  "sourceCode": "Code source",
   "makeADonation": "Faire un don",
 
   "decrease": "Diminuer",
