add app update auto check and button

--- a/translations/locales/en/button.json
+++ b/translations/locales/en/button.json
@@ -8,6 +8,8 @@
   "sourceCode": "Source code",
   "makeADonation": "Make a donation",
   "openSourceLicenses": "Open Source Licenses",
+  "update": "Update",
+  "updateTheApp": "Update the app",
   "resetSettings": "Reset settings",
   "deleteAllBuildsInMemory": "Delete all saved builds",
   "confirm": "Confirm",
