--- a/translations/locales/en/tooltip.json
+++ b/translations/locales/en/tooltip.json
@@ -31,6 +31,8 @@
   "sendFeedback": "Send feedback",
   "sourceCode": "Source code",
   "makeADonation": "Make a donation",
+  "update": "Update",
+  "updateTheApp": "Update the app",
 
   "decrease": "Decrease",
   "increase": "Increase",
