--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -8,6 +8,8 @@
   "sourceCode": "Code source",
   "makeADonation": "Faire un don",
   "openSourceLicenses": "Licences Open Source",
+  "update": "Mettre à jour",
+  "updateTheApp": "Mettre à jour l'appli",
   "resetSettings": "Réinitialiser les préférences",
   "deleteAllBuildsInMemory": "Supprimer tous les builds enregistrés",
   "confirm": "Confirmer",
