--- a/translations/locales/fr/tooltip.json
+++ b/translations/locales/fr/tooltip.json
@@ -31,6 +31,8 @@
   "sendFeedback": "Laisser un avis",
   "sourceCode": "Code source",
   "makeADonation": "Faire un don",
+  "update": "Mettre à jour",
+  "updateTheApp": "Mettre à jour l'appli",
 
   "decrease": "Diminuer",
   "increase": "Augmenter",
