add sections in settings screen

--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -26,5 +26,11 @@
 
   "tutoImportation": "Copiez le texte, allez dans 'Collection' et cliquez sur le bouton 'Importer' (presse-papier).",
 
-  "modified": "modifié"
+  "modified": "modifié",
+
+  "general": "Généraux",
+  "displaying": "Affichage",
+  "community": "Communauté",
+  "developer": "Développeur",
+  "maintenance": "Maintenance"
 }
