--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -26,5 +26,11 @@
 
   "tutoImportation": "Copy the text, go to 'Collection', and click the 'Import' (clipboard) button.",
 
-  "modified": "modified"
+  "modified": "modified",
+
+  "general": "General",
+  "displaying": "Display",
+  "community": "Community",
+  "developer": "Developer",
+  "maintenance": "Maintenance"
 }
