rename MT of mini turbo into MTu

--- a/translations/locales/en/sortsMK8D.json
+++ b/translations/locales/en/sortsMK8D.json
@@ -15,7 +15,7 @@
   "handlingWater": "Water handling (WH)",
   "handlingAir": "Air handling (AH)",
   "traction": "Traction (Tra)",
-  "miniTurbo": "Mini-Turbo (MT)",
+  "miniTurbo": "Mini-Turbo (MTu)",
 
   "speed": "Speed",
   "handling": "Handling"
