--- a/translations/locales/en/sortsMKW.json
+++ b/translations/locales/en/sortsMKW.json
@@ -13,7 +13,7 @@
   "handlingRough": "Handling rough (HR)",
   "handlingWater": "Water handling (HW)",
   "traction": "Traction (Tra)",
-  "miniTurbo": "Mini-Turbo (MT)",
+  "miniTurbo": "Mini-Turbo (MTu)",
 
   "speed": "Speed",
   "handling": "Handling"
