--- a/translations/locales/fr/sortsMKW.json
+++ b/translations/locales/fr/sortsMKW.json
@@ -13,7 +13,7 @@
   "handlingRough": "Maniabilité rugueux (MR)",
   "handlingWater": "Maniabilité eau (ME)",
   "traction": "Adhérence (Adh)",
-  "miniTurbo": "Mini-turbo (MT)",
+  "miniTurbo": "Mini-turbo (MTu)",
 
   "speed": "Vitesse",
   "handling": "Maniabilité"
