--- a/translations/locales/fr/sortsMK8D.json
+++ b/translations/locales/fr/sortsMK8D.json
@@ -15,7 +15,7 @@
   "handlingWater": "Maniabilité eau (ME)",
   "handlingAir": "Maniabilité air (MA)",
   "traction": "Adhérence (Adh)",
-  "miniTurbo": "Mini-turbo (MT)",
+  "miniTurbo": "Mini-turbo (MTu)",
 
   "speed": "Vitesse",
   "handling": "Maniabilité"
