--- a/translations/locales/fr/statsMKW.json
+++ b/translations/locales/fr/statsMKW.json
@@ -8,7 +8,7 @@
   "handlingRough": "Maniabilité rugueux (MR)",
   "handlingWater": "Maniabilité eau (ME)",
   "traction": "Adhérence (Adh)",
-  "miniTurbo": "Mini-turbo (MT)",
+  "miniTurbo": "Mini-turbo (MTu)",
 
   "SS": "VL",
   "SR": "VR",
@@ -21,5 +21,5 @@
   "HW": "ME",
   "HA": "MA",
   "Tra": "Adh",
-  "MT": "MT"
+  "MTu": "MTu"
 }
