--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -20,6 +20,8 @@
   "deleteAllBuildsInMemoryText": "Do you really want to delete all saved builds?",
   "appliedForBuildFinderAndComparator": "Applied when the app starts, for the Finder and the Comparator",
 
+  "introText": "This tool helps you find the best build based on your playstyle. If you need help, long-press an element to view its description, or use the help button at the top of the screen.",
+
   "buildFound": "Build found",
 
   "warning": "Warning",
