--- a/translations/locales/fr/button.json
+++ b/translations/locales/fr/button.json
@@ -27,5 +27,7 @@
   "share": "Partager",
 
   "collection": "Ouvrir la Collection",
-  "import": "Importer un build"
+  "import": "Importer un build",
+
+  "longPress": "Appuyez longuement"
 }
