--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -20,6 +20,8 @@
   "deleteAllBuildsInMemoryText": "Souhaitez-vous vraiment supprimer tous les builds enregistrés ?",
   "appliedForBuildFinderAndComparator": "Appliquées au démarrage de l'app, pour le Chercheur et le Comparateur",
 
+  "introText": "Cet outil vous aide à trouver le meilleur build selon votre style de jeu. En cas de doute, effectuez un appui long sur un élément pour afficher sa description, ou utilisez le bouton d’aide au haut de l'écran.",
+
   "buildFound": "Build trouvé",
 
   "warning": "Attention",
