--- a/translations/locales/en/text.json
+++ b/translations/locales/en/text.json
@@ -21,7 +21,7 @@
   "appliedForBuildFinderAndComparator": "Applied when the app starts, for the Finder and the Comparator",
   "doYouWantToOpenTheBrowser": "Do you want to open the browser?",
 
-  "introText": "This tool helps you find the best build based on your playstyle. If you need help, long-press an element to view its description, or use the help button at the top of the screen.",
+  "welcomeText": "This tool helps you find the best build based on your playstyle. If you need help, long-press an element to view its description, or use the help button at the top of the screen.",
 
   "buildFound": "Build found",
 
