--- a/translations/locales/fr/text.json
+++ b/translations/locales/fr/text.json
@@ -21,7 +21,7 @@
   "appliedForBuildFinderAndComparator": "Appliquées au démarrage de l'app, pour le Chercheur et le Comparateur",
   "doYouWantToOpenTheBrowser": "Voulez-vous ouvrir le navigateur ?",
 
-  "introText": "Cet outil vous aide à trouver le meilleur build selon votre style de jeu. En cas de doute, effectuez un appui long sur un élément pour afficher sa description, ou utilisez le bouton d’aide au haut de l'écran.",
+  "welcomeText": "Cet outil vous aide à trouver le meilleur build selon votre style de jeu. En cas de doute, effectuez un appui long sur un élément pour afficher sa description, ou utilisez le bouton d’aide au haut de l'écran.",
 
   "buildFound": "Build trouvé",
 
